Обновление swagger и реализация нескольких базовых методов
