# server/routes/AuthRouter.ts
@@ -5,6 +5,6 @@ import registrationMiddleware from "../middleware/RegistrationMiddleware"
 const router = Router()
 
 router.post("/registration", registrationMiddleware, controller.RegisterUser)
-router.get("/login", controller.LogIn)
+router.post("/login", controller.LogIn)
 
 export {router as authRouter}
